<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@drawable/tttbackground">

    <TextView
            android:id="@+id/rules_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rules"
            style="@style/ruleStyle"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rules_body"
    />

    <TextView
            android:id="@+id/rules_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rule_text"
            style="@style/ruleBodyStyle"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/play"
            app:layout_constraintTop_toBottomOf="@id/rules_id"
    />


    <Button
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/play"
            style="@style/buttonStyle"
            app:layout_constraintTop_toBottomOf="@id/rules_body"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

    />

</android.support.constraint.ConstraintLayout>