<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/tttbackground"
        tools:context=".TieActivity">

    <ImageView
            android:id="@+id/tie"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/win"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/congrats3_msg"
    />

    <TextView
            android:id="@+id/congrats3_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tie"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="24dp"
            style="@style/playerWin"
            android:text="@string/tie"
    />

    <Button
            android:id="@+id/yes3Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/congrats3_msg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/no3Btn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/Yes"
            style="@style/buttonStyle"
            app:layout_constraintVertical_bias="0.0"/>

    <Button
            android:id="@+id/no3Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/congrats3_msg"
            app:layout_constraintLeft_toRightOf="@id/yes3Btn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/No"
            style="@style/buttonStyle"
            app:layout_constraintVertical_bias="0.0"/>

</android.support.constraint.ConstraintLayout>