<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@drawable/tttbackground">

    <ImageView
            android:id="@+id/win2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/win"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/congrats2_msg"
    />

    <TextView
            android:id="@+id/congrats2_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/win2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            style="@style/playerWin"
            android:text="@string/player2Win"
    />

    <Button
            android:id="@+id/yes2Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/congrats2_msg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/no2Btn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/Yes"
            style="@style/buttonStyle"
            app:layout_constraintVertical_bias="0.0"/>

    <Button
            android:id="@+id/no2Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/congrats2_msg"
            app:layout_constraintLeft_toRightOf="@id/yes2Btn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/No"
            style="@style/buttonStyle"
            app:layout_constraintVertical_bias="0.0"/>

</android.support.constraint.ConstraintLayout>